[FIX] Form: Empty Link is too small
if a link is empty it consumes no space. This leads to a flickering if
the text comes later. Even if it is empty it looks stange.

For Text in display mode form the size is too small if the label is
above the text or no label is there. 

BCP: 1980241510

--- a/src/sap.m/src/sap/m/themes/base/Link.less
+++ b/src/sap.m/src/sap/m/themes/base/Link.less
@@ -107,9 +107,13 @@ html.sap-desktop .sapMLnk:focus:not(.sapMLnkDsbl) {
 	outline: 1px dotted @sapUiContentFocusColor;
 }
 
+.sapUiForm .sapMLnk {
+	min-height: 1rem; /* do give empty links a size too. Keep the Form stable */
+}
+
 .sapUiFormEdit .sapMLnk {
 	line-height: normal;
-	margin-top: 1rem;
+	margin-top: 1rem; /* don't use padding as this would stretch the focus outline */
 	margin-bottom: 0.75rem; /* for some reason browser adds 4px, display: block would lead to stretched focus outline*/
 }
 
