--- a/src/sap.m/src/sap/m/themes/base/Text.less
+++ b/src/sap.m/src/sap/m/themes/base/Text.less
@@ -77,6 +77,10 @@ html[data-sap-ui-browser="sf10"] {
 	padding-bottom: 0.8125rem;
 }
 
+.sapUiForm:not(.sapUiFormEdit) .sapMText {
+	min-height: 1rem; /* for empty text */
+}
+
 .sapMLIBActive .sapMText,
 .sapMLIBActive .sapMListTblCell .sapMText,
 .sapMLIBActive .sapMListTblSubCntRow .sapMText {
